--- a/IMDBConsumer/IMDBConsumer.Win10/IMDBConsumer.Win10.csproj
+++ b/IMDBConsumer/IMDBConsumer.Win10/IMDBConsumer.Win10.csproj
@@ -121,6 +121,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Configuration\WindowConfiguration.cs" />
     <Compile Include="DependencyCache.cs" />
     <Compile Include="Extensions\ExceptionExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
